--- a/package.json
+++ b/package.json
@@ -13,15 +13,15 @@
     "@astrojs/mdx": "^4.3.4",
     "@astrojs/react": "^4.3.0",
     "@astrojs/sitemap": "^3.5.0",
-    "@tailwindcss/vite": "^4.1.12",
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
     "astro": "^5.13.2",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1",
-    "tailwindcss": "^4.1.12"
+    "react-dom": "^19.1.1"
   },
   "devDependencies": {
-    "gh-pages": "^6.3.0"
+    "@astrojs/tailwind": "^6.0.2",
+    "gh-pages": "^6.3.0",
+    "tailwindcss": "^3.4.17"
   }
 }
